--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         }
 
         header {
-            background-color: redf;
+            background-color: red;
             color: white;
             padding: 20px 0;
             text-align: center;
