--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dara Employment Agency LLC</title>
+    <title>Dara Employment Agency, LLC</title>
     <style>
         /* Global Styles */
         body {
@@ -254,18 +254,18 @@
 
     <!-- About Us Section -->
     <section id="about">
-        <h2>About Dara Employment Agency LLC</h2>
+        <h2>About Dara Employment, Agency LLC</h2>
         <p>
-            Dara Employment Agency LLC is a forward-thinking staffing firm focused on providing innovative solutions to meet the needs of modern businesses. As a startup, we understand the ever-evolving challenges companies face in a fast-paced, dynamic labor market. Our agency was founded with a mission to bridge the gap between businesses and talented workers, offering high-quality staffing services to help organizations thrive.
+            Dara Employment Agency, LLC is a forward-thinking staffing firm focused on providing innovative solutions to meet the needs of modern businesses. As a startup, we understand the ever-evolving challenges companies face in a fast-paced, dynamic labor market. Our agency was founded with a mission to bridge the gap between businesses and talented workers, offering high-quality staffing services to help organizations thrive.
         </p>
         <p>
-            With an emphasis on responsiveness, professionalism, and compliance, Dara Employment Agency LLC is dedicated to addressing the workforce challenges that companies face today. We specialize in temporary staffing, direct hire, and Employer of Record (EOR) services, which allow our clients to stay agile and competitive in the face of changing market conditions.
+            With an emphasis on responsiveness, professionalism, and compliance, Dara Employment Agency, LLC is dedicated to addressing the workforce challenges that companies face today. We specialize in temporary staffing, direct hire, and Employer of Record (EOR) services, which allow our clients to stay agile and competitive in the face of changing market conditions.
         </p>
         <p>
             Our strength lies in our commitment to understanding each business's unique needs and providing tailored solutions that make a real impact. We build lasting partnerships by offering a personalized approach to staffing, helping companies achieve their growth objectives with the right talent at the right time.
         </p>
         <p>
-            At Dara Employment Agency, we pride ourselves on our industry expertise, our deep knowledge of compliance regulations, and our focus on long-term relationships with both clients and workers. Whether you need to fill a short-term gap, hire key personnel, or outsource the management of contingent workers, we are your trusted partner for workforce solutions.
+            At Dara Employment Agency(DEA), we pride ourselves on our industry expertise, our deep knowledge of compliance regulations, and our focus on long-term relationships with both clients and workers. Whether you need to fill a short-term gap, hire key personnel, or outsource the management of contingent workers, we are your trusted partner for workforce solutions.
         </p>
         <p>
             Our agency's vision is to be a top-tier provider of staffing services across a range of industries, offering businesses a competitive edge through effective workforce solutions. We are driven by the belief that the right people are key to achieving success, and we aim to match top talent with the best companies to create powerful, high-performing teams.
@@ -361,10 +361,7 @@
             <li><strong>Manufacturing & Distribution:</strong> We recruit for industries that require skilled workers in manufacturing, logistics, and distribution.</li>
         </ul>
 
-        <h3>Proven Results</h3>
-        <p>
-            With thousands of successful placements and a growing client base, Dara Employment Agency LLC has established a strong reputation for delivering quality staffing solutions that drive business success.
-        </p>
+       
     </section>
 
     <!-- Contact Section -->
