--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         }
 
         footer {
-            background-color: #red;
+            background-color: red;
             color: white;
             padding: 20px 0;
             text-align: center;
