--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         footer {
             background-color: red;
             color: white;
-            padding: 20px 0;
+            padding: 20px ;
             text-align: center;
             margin-top: 40px;
             border-radius:20px;
