--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 
     <!-- About Us Section -->
     <section id="about">
-        <h2>About Dara Employment, Agency LLC</h2>
+        <h2>About Dara Employment Agency, LLC</h2>
         <p>
             Dara Employment Agency, LLC is a forward-thinking staffing firm focused on providing innovative solutions to meet the needs of modern businesses. As a startup, we understand the ever-evolving challenges companies face in a fast-paced, dynamic labor market. Our agency was founded with a mission to bridge the gap between businesses and talented workers, offering high-quality staffing services to help organizations thrive.
         </p>
@@ -304,7 +304,7 @@
 
         <h3>Client Benefits</h3>
         <p>
-            Partnering with Dara Employment Agency brings a wide range of benefits, such as:
+            Partnering with Dara Employment Agency(DEA) brings a wide range of benefits, such as:
         </p>
         <ul>
             <li><strong>Quick Access to Talent:</strong> We fill positions quickly with qualified candidates ready to contribute immediately.</li>
@@ -314,7 +314,7 @@
 
         <h3>A Unique and Effective Staffing Partner</h3>
         <p>
-            As a unique staffing partner, Dara Employment Agency helps you:
+            As a unique staffing partner, Dara Employment Agency,LLC(DEA) helps you:
         </p>
         <ul>
             <li><strong>Build High-Functioning Teams:</strong> We identify top performers and bring them together to form cohesive, productive teams.</li>
@@ -325,7 +325,7 @@
 
         <h3>A Top-Tier Provider of Temporary Staffing Services</h3>
         <p>
-            Even as a young startup, Dara Employment Agency LLC aims to be a leader in staffing services:
+            Even as a young startup, Dara Employment Agency, LLC aims to be a leader in staffing services:
         </p>
         <ul>
             <li><strong>Superior Service:</strong> We are committed to delivering top-tier service that exceeds industry standards.</li>
