--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
     <!-- Home Section -->
     <section id="home">
         <div class="hero">
-            <h1>Dara Employment Agency LLC</h1>
+            <h1>Dara Employment Agency, LLC</h1>
             <p>A Startup with a Big Mission: Helping Businesses Grow Through Smart, Effective Staffing Solutions</p>
         </div>
     </section>
