--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         .hero {
             text-align: center;
             margin-bottom: 40px;
-            padding: 80px 20px;
+                padding: 50px 20px;   
             background-color: #007bff;
             color: white;
             border-radius: 8px;
@@ -292,7 +292,7 @@
             <li><strong>Customer-Centric Approach:</strong> We take the time to understand your needs and culture to provide the best staffing fit.</li>
         </ul>
 
-        <h3>Dara's Strengths</h3>
+        <h3>DEA's Strengths</h3>
         <p>
             At Dara Employment Agency, our strengths are built on providing exceptional service that addresses real business challenges. We specialize in:
         </p>
