--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                     });
 
                     if (response.ok) {
-                        showFeedback('Message sent successfully! We will contact you soon. Thank you so much for contacting us!', 'success');
+                        showFeedback('Message sent successfully! We will contact you as soon as possible. Thank you so much for contacting Dara Employment Agency, LLC(DEA)!', 'success');
                         contactForm.reset();
                     } else {
                         throw new Error('Form submission failed');
