--- a/index.html
+++ b/index.html
@@ -58,13 +58,19 @@
         }
 
         .hero {
-            text-align: center;
+               text-align: center;
             margin-bottom: 40px;
-                padding: 50px 20px;   
-            background-color: #007bff;
-            color: white;
-            border-radius: 8px;
-        }
+                padding: 50px 20px;
+          background-image: 
+            
+            url(https://as1.ftcdn.net/v2/jpg/01/54/95/10/1000_F_154951004_jcAiimvlZLnjvbHtBb5bsQ50SLENMShw.jpg);        opacity: 0.5;
+  color: red;
+  border-radius: 8px;
+  
+  text-shadow: 8px 8px 10px black;  
+  background-blend-mode: overlay;   
+  padding: 20px;   
+  border-radius: 10px;        }
 
         .hero h1 {
             font-size: 2.5em;
