--- a/index.html
+++ b/index.html
@@ -76,6 +76,10 @@
             font-size: 2.5em;
             margin: 20px 0;
         }
+ui{
+  
+  font-size:4em;
+}        
 
         .hero p {
             font-size: 1.2em;
@@ -253,6 +257,7 @@
     <!-- Home Section -->
     <section id="home">
         <div class="hero">
+ <ui>DEA</ui>            
             <h1>Dara Employment Agency, LLC</h1>
             <p>A Startup with a Big Mission: Helping Businesses Grow Through Smart, Effective Staffing Solutions</p>
         </div>
