--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@ ui{
                     });
 
                     if (response.ok) {
-                        showFeedback('Message sent successfully! We will contact you as soon as possible. Thank you so much for contacting Dara Employment Agency, LLC(DEA)!', 'success');
+                        showFeedback('Message sent successfully! We will contact you as soon as possible. Thank you very much for contacting Dara Employment Agency, LLC (DEA)!', 'success');
                         contactForm.reset();
                     } else {
                         throw new Error('Form submission failed');
