--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         }
 
         header {
+            
             background-color: red;
-            color: white;
+            opacity: 0.5;           
             padding: 20px 0;
             text-align: center;
             position: sticky;
