--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
         header {
             
             background-color: red;
-            opacity: 0.5;           
+            opacity: 0.6
+;           
             padding: 20px 0;
             text-align: center;
             position: sticky;
