--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dara Employment Agency | Professional Staffing Solutions</title>
+    <title>Dara Employment Agency, LLC | Professional Staffing Solutions</title>
     <meta name="description" content="Dara Employment Agency provides premier staffing solutions including temporary, direct hire, and employer of record services across multiple industries.">
     <link rel="icon" href="dea_red_favicon.png" type="image/png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -728,7 +728,7 @@
     <section class="section about" id="about">
         <div class="container">
             <div class="section-title">
-                <h2>About Dara Employment Agency</h2>
+                <h2>About Dara Employment Agency, LLC</h2>
                 <p>Your trusted partner for workforce solutions</p>
             </div>
             
@@ -1000,9 +1000,9 @@
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
                                 <strong>Main Office</strong><br>
-                                123 Business Park Drive<br>
-                                Suite 200<br>
-                                Boston, MA 02110
+                                81 Chapel Street<br>
+                                <br>
+                                leicester,Charry Valley, MA 01611
                             </div>
                         </li>
                         <li>
