--- a/index.html
+++ b/index.html
@@ -1092,7 +1092,7 @@
             <div class="footer-container">
                 <div class="footer-col">
                     <h3>Dara Employment</h3>
-                    <p>Providing strategic staffing solutions since 2010. We connect top talent with leading employers through innovative workforce solutions.</p>
+                    <p>We connect top talent with leading employers through innovative workforce solutions.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
