--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
                 
                 <div class="contact-form">
                     <h3>Send Us a Message</h3>
-                    <form action="https://formsubmit.co/daradea0425@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/darathach1812d@gmail.com" method="POST">
                         <input type="hidden" name="_subject" value="New Contact Us Message">
                         <input type="hidden" name="_redirect" value="http://yourwebsite.com/thank-you">
                         
@@ -1198,7 +1198,7 @@
                         const formData = new FormData(applicationForm);
 
                         // Submit to FormSubmit.co
-                        const response = await fetch('https://formsubmit.co/ajax/daradea0425@gmail.com', {
+                        const response = await fetch('https://formsubmit.co/ajax/darathach1812d@gmail.com', {
                             method: 'POST',
                             body: formData
                         });
