--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
         <div class="container header-container">
             <div class="logo">
                 <img src="dea_red_favicon.png" alt="Dara Employment Agency Logo">
-                <div class="logo-text">Dara <span>Employment</span></div>
+                <div class="logo-text">Dara <span>Employment Agency, LLc</span></div>
             </div>
             
             <button class="nav-toggle" id="navToggle">
