--- a/index.html
+++ b/index.html
@@ -908,10 +908,11 @@
             </div>
             
             <p><strong>Option 2:</strong> Complete our online application below:</p>
-            <form id="job-application-form" 
-      action="https://formsubmit.co/el/[YOUR_UNIQUE_ID]" 
+           <form id="job-application-form" 
+      action="https://formsubmit.co/darathach1812d@gmail.com" 
       method="POST" 
       enctype="multipart/form-data">
+
                 <input type="hidden" name="_subject" value="New Job Application - Dara Employment Agency">
                 <input type="hidden" name="_template" value="table">
                 <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
