--- a/index.html
+++ b/index.html
@@ -909,7 +909,8 @@
             
             <p><strong>Option 2:</strong> Complete our online application below:</p>
            <form id="job-application-form" 
-      action="https://formsubmit.co/darathach1812d@gmail.com" 
+      action="https://formspree.io/f/mjkwdpwd"
+
       method="POST" 
       enctype="multipart/form-data">
 
@@ -1172,7 +1173,8 @@ document.addEventListener('DOMContentLoaded', function () {
                 formData.append('service', 'job_application');
                 
                 // Submit to FormSubmit.co with file upload
-                const response = await fetch('https://formsubmit.co/ajax/daradea0425@gmail.com', {
+                const response = await fetch('https://formspree.io/f/mjkwdpwd', {
+
                     method: 'POST',
                     body: formData,
                     headers: {
