--- a/index.html
+++ b/index.html
@@ -913,9 +913,15 @@
       <p><strong>Option 2:</strong> Complete our online application below:</p>
       <form id="job-application-form" action="https://formspree.io/f/mjkwdpwd" method="POST" enctype="multipart/form-data">
         <input type="hidden" name="_subject" value="New Job Application - Dara Employment Agency">
-        <input type="hidden" name="_template" value="table">
-        <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
-        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_replyto" value="">
+        <input type="hidden" name="_language" value="en">
+        <input type="hidden" name="_next" value="#application">
+        <input type="hidden" name="_gotcha">
+
+        <div class="form-group">
+          <label for="full-name">Full Name *</label>
+          <input type="text" id="full-name" name="full_name" class="form-control" required>
+        </div>
 
         <div class="form-group">
           <label for="email">Email Address *</label>
@@ -935,8 +941,13 @@
             <option value="Manufacturing">Manufacturing</option>
             <option value="Administrative">Administrative</option>
             <option value="Skilled Trade">Skilled Trade</option>
-            <option value="Other">Other</option>
+            <option value="Other">Other (please specify)</option>
           </select>
+        </div>
+
+        <div class="form-group" id="other-position-container" style="display: none;">
+          <label for="other-position">Please specify position</label>
+          <input type="text" id="other-position" name="other_position" class="form-control">
         </div>
 
         <div class="form-group">
@@ -963,18 +974,20 @@
 
         <div class="form-group">
           <label for="resume">Upload Resume (PDF or Word) *</label>
-          <input type="file" id="resume" name="attachment" class="form-control" accept=".pdf,.doc,.docx" required>
+          <input type="file" id="resume" name="resume" class="form-control" accept=".pdf,.doc,.docx" required>
           <small class="form-text">Max file size: 5MB. Accepted formats: PDF, DOC, DOCX</small>
         </div>
 
         <div class="form-group">
           <label for="message">Additional Information</label>
-          <textarea id="message" name="message" class="form-control" rows="4"></textarea>
+          <textarea id="message" name="message" class="form-control" rows="4" placeholder="Any additional skills, certifications, or information you'd like to share..."></textarea>
         </div>
 
-        <button type="submit" id="submit-btn" class="btn" style="width: 100%;">
-          <i class="fas fa-paper-plane"></i> Submit Application
-        </button>
+        <div class="form-group" style="margin-top: 30px;">
+          <button type="submit" id="submit-btn" class="btn" style="width: 100%;">
+            <i class="fas fa-paper-plane"></i> Submit Application
+          </button>
+        </div>
 
         <div id="form-status" style="margin-top: 20px;"></div>
       </form>
