--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,7 @@
                 <form id="job-application-form" method="POST">
                     <input type="hidden" name="_subject" value="New Job Application - Dara Employment Agency">
                     <input type="hidden" name="_template" value="table">
-                    <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
+                    <input type="hidden" name="_next" value="https://dara1812d.github.io/daradea2/#/thank-you.html">
                     <input type="hidden" name="_captcha" value="false">
 
                     <div class="form-group">
@@ -1158,10 +1158,10 @@
 
                 <div class="contact-form">
                     <h3>Send Us a Message</h3>
-                    <form action="https://formsubmit.co/daradea0425@gmail.com" method="POST">
+                    <form action="https://formsubmit.co/darathach1812d@gmail.com" method="POST">
                         <input type="hidden" name="_subject" value="New Contact Form Submission">
                         <input type="hidden" name="_template" value="table">
-                        <input type="hidden" name="_next" value="https://yourwebsite.com/thank-you.html">
+                        <input type="hidden" name="_next" value="https://dara1812d.github.io/daradea2/#/thank-you.html">
                         <input type="hidden" name="_captcha" value="false">
 
                         <div class="form-group">
@@ -1238,7 +1238,11 @@
                 <div class="footer-col">
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-phone"></i> (508) 619-1906</li>
+                        <li><i class="fas fa-phone"></i> Office: (508) 892-5038<br>
+Office:(508) 619-1906<br>
+Cell: (774) 810-4373<br>
+Cell: (508) 797-2783<br>
+                                                                           ></li>
                         <li><i class="fas fa-envelope"></i> daradea0425@gmail.com</li>
                         <li><i class="fas fa-map-marker-alt"></i> Boston, MA</li>
                     </ul>
@@ -1287,7 +1291,7 @@
                         const formData = new FormData(applicationForm);
 
                         // Submit to FormSubmit.co
-                        const response = await fetch('https://formsubmit.co/ajax/daradea0425@gmail.com', {
+                        const response = await fetch('https://formsubmit.co/ajax/darathach1812d@gmail.com', {
                             method: 'POST',
                             body: formData,
                             headers: {
