--- a/index.html
+++ b/index.html
@@ -1239,10 +1239,10 @@
                 <div class="footer-col">
                     <h3>Contact Info</h3>
                     <ul class="footer-links">
-                        <li><i class="fas fa-phone"></i> Office: (508) 892-5038<br>
-Office:(508) 619-1906<br>
-Cell: (774) 810-4373<br>
-Cell: (508) 797-2783<br>
+                        <li><i class="fas fa-phone"></i> Office: (508) 892-5038</li>
+<li><i class="fas fa-phone"></i>Office:(508) 619-1906</li>
+<li><i class="fas fa-phone"></i>Cell: (774) 810-4373</li>
+<li><i class="fas fa-phone"></i>Cell: (508) 797-2783</li>
                                                                            </li>
                         <li><i class="fas fa-envelope"></i> daradea0425@gmail.com</li>
                         <li><i class="fas fa-map-marker-alt"></i> Boston, MA</li>
