--- a/index.html
+++ b/index.html
@@ -1300,7 +1300,7 @@ document.addEventListener('DOMContentLoaded', function() {
                     const formData = new FormData(form);
                     
                     // Submit to FormSubmit.co
-                    const response = await fetch('https://formsubmit.co/ajax/daradea0425@gmail.com', {
+                    const response = await fetch('https://formsubmit.co/ajax/darathach1812d@gmail.com', {
                         method: 'POST',
                         body: formData,
                         headers: {
