--- a/index.html
+++ b/index.html
@@ -1156,8 +1156,10 @@
 
                 <h3>Contact Details</h3>
                 <ul class="contact-details">
-                    <li><i class="fas fa-phone"></i><strong> Office:</strong> (508) 619-1906, (508) 892-5038</li>
-                    <li><i class="fas fa-mobile-alt"></i><strong> Cell:</strong> (774) 810-4373, (508) 797-2783</li>
+                    <li><i class="fas fa-phone"></i><strong> Office:</strong> (508) 619-1906</li> 
+                    <li><i class="fas fa-phone"><strong>Office:</strong>(508) 892-5038</li>
+                    <li><i class="fas fa-mobile-alt"></i><strong> Cell:</strong> (774) 810-4373</li> 
+                    <li> <i class="fas fa-mobile-alt"></i><strong> Cell:</strong> (508) 797-2783</li>
                     <li><i class="fas fa-envelope"></i><strong> Email:</strong> daradea0425@gmail.com</li>
                     <li><i class="fas fa-clock"></i><strong> Hours:</strong> Monday–Friday, 8:00 AM – 5:00 PM</li>
                 </ul>
