--- a/index.html
+++ b/index.html
@@ -805,6 +805,11 @@
                 font-size: 1.1rem;
             }
         }
+        .contact-form {
+    max-width: 600px;
+    margin: 0 auto;
+    width: 100%;
+}
     </style>
 </head>
 <body>
