--- a/index.html
+++ b/index.html
@@ -440,29 +440,33 @@
         }
 
         /* Contact Section */
-        /* Contact Section */
+ /* Contact Section - Side by Side Layout */
 .contact {
     background-color: var(--white);
 }
 
 .contact-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr; /* Split into two equal columns */
-    gap: 40px;
-    align-items: start; /* Align content to the top */
+    display: flex;          /* Changed from grid to flex */
+    gap: 40px;             /* Space between columns */
+    align-items: flex-start; /* Align items to the top */
 }
 
-/* Contact Info Box (Left Side) */
+/* Left Column: Contact Info */
 .contact-info {
-    padding: 20px;
+    flex: 1;               /* Take up equal space */
+    padding: 30px;
     background: var(--light-gray);
     border-radius: 8px;
     box-shadow: var(--box-shadow);
 }
 
-.contact-info h3 {
-    color: var(--primary-blue);
-    margin-bottom: 20px;
+/* Right Column: Contact Form */
+.contact-form {
+    flex: 1;               /* Take up equal space */
+    padding: 30px;
+    background: var(--white);
+    border-radius: 8px;
+    box-shadow: var(--box-shadow);
 }
 
 /* Contact Details List */
@@ -475,15 +479,30 @@
     margin-bottom: 15px;
     display: flex;
     align-items: flex-start;
-    gap: 15px;
+    gap: 15px;             /* Space between icon and text */
 }
 
 .contact-details li i {
     color: var(--primary-red);
     font-size: 20px;
-    min-width: 25px;
+    min-width: 25px;       /* Ensures icons align */
     text-align: center;
-    margin-top: 3px;
+}
+
+.contact-details li div {
+    flex: 1;
+}
+
+.contact-details strong {
+    display: inline-block;
+    min-width: 60px;       /* Aligns labels like "Office:" */
+}
+
+/* Mobile Responsiveness */
+@media (max-width: 768px) {
+    .contact-container {
+        flex-direction: column; /* Stack on mobile */
+    }
 }
 
 .contact-details li div {
