--- a/index.html
+++ b/index.html
@@ -1203,9 +1203,9 @@
                         <li>
                             <i class="fas fa-map-marker-alt"></i>
                             <div>
-                                <strong>Branch Office</strong><br>
-                                456 Industrial Way<br>
-                                Worcester, MA 01605
+                                <strong>.</strong><br>
+                                <br>
+                                
                             </div>
                         </li>
                     </ul>
@@ -1338,7 +1338,7 @@
                         <li><i class="fas fa-mobile-alt"></i> Cell: (774) 810-4373</li>
                         <li><i class="fas fa-mobile-alt"></i> Cell: (508) 797-2783</li>
                         <li><i class="fas fa-envelope"></i> daradea0425@gmail.com</li>
-                        <li><i class="fas fa-map-marker-alt"></i> Boston, MA</li>
+                        <li><i class="fas fa-map-marker-alt"></i> Leicester, MA</li>
                     </ul>
                 </div>
             </div>
