--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About Us</a></li>
-                    <li><a href="#services">Services</a></li
+                    <li><a href="#services">Services</a></li>
                     <li><a href="#positions">Positions</a></li>
                     <li><a href="#application">Apply Now</a></li>
                     <li><a href="#contact">Contact</a></li>
