--- a/index.html
+++ b/index.html
@@ -1018,7 +1018,7 @@
                 </div>
                 
                 <div class="about-image">
-                    <img src="https://images.unsplash.com/photo-1521791136064-7986c2920216?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2069&q=80" alt="Dara Employment Agency Team">
+                    <img src="AdobeStock_1034679007_Preview.jpeg">
                 </div>
             </div>
         </div>
