--- a/index.html
+++ b/index.html
@@ -925,19 +925,29 @@
     </header>
 
     <!-- Hero Section -->
-    <section class="hero" id="home">
-        <div class="hero-content">
-           <h1 class="typewriter">
-  <span class="typewriter-line">Strategic Staffing Solutions</span>
-  <span class="typewriter-line">for Businesses</span>
-</h1>
-            <p>Dara Employment Agency connects top talent with leading companies through temporary staffing, direct hire, and comprehensive employer of record services.</p>
-            <div class="hero-btns">
-                <a href="#application" class="btn">Apply for Jobs</a>
-                <a href="#contact" class="btn btn-outline">Contact Our Team</a>
-            </div>
+<!-- Hero Section with Video Background -->
+<section class="hero" id="home">
+    <div class="video-background">
+        <video autoplay loop muted playsinline>
+            <source src="7049943-hd_1920_1080_30fps.mp4" type="video/mp4">
+            <!-- Fallback image if video doesn't load -->
+            <img src="fallback-image.jpg" alt="Hero Background">
+        </video>
+        <div class="video-overlay"></div>
+    </div>
+    
+    <div class="hero-content">
+        <h1 class="typewriter">
+            <span class="typewriter-line">Strategic Staffing Solutions</span>
+            <span class="typewriter-line">for Businesses</span>
+        </h1>
+        <p>Dara Employment Agency connects top talent with leading companies through temporary staffing, direct hire, and comprehensive employer of record services.</p>
+        <div class="hero-btns">
+            <a href="#application" class="btn">Apply for Jobs</a>
+            <a href="#contact" class="btn btn-outline">Contact Our Team</a>
         </div>
-    </section>
+    </div>
+</section>
 
     <!-- Image Split Section -->
     <div class="image-split-section">
