--- a/index.html
+++ b/index.html
@@ -205,13 +205,68 @@
 
         /* Hero Section */
         .hero {
-            background: linear-gradient(135deg, var(--primary-blue), var(--secondary-blue));
-            color: var(--white);
-            padding: 180px 0 100px;
-            text-align: center;
             position: relative;
-            overflow: hidden;
+    height: 100vh;
+    min-height: 600px;
+    color: var(--white);
+    text-align: center;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
         }
+
+
+
+        '/* Video Background Styles */
+.video-background {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 0;
+    overflow: hidden;
+}
+
+.video-background video {
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    object-fit: cover;
+}
+
+.video-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 51, 160, 0.5); /* Semi-transparent blue overlay */
+    z-index: 1;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        
 
         .hero:before {
             content: '';
@@ -225,9 +280,12 @@
         }
 
         .hero-content {
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 0 20px;
+              position: relative;
+    z-index: 2;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
         }
 
         .hero h1 {
@@ -892,6 +950,10 @@
   from, to { border-color: transparent }
   50% { border-color: var(--primary-red); }
 }
+
+
+
+        
 
 @keyframes remove-caret {
   to { border-right: none; }
