--- a/index.html
+++ b/index.html
@@ -926,6 +926,20 @@
 
     <!-- Hero Section -->
     <section class="hero" id="home">
+         <div class="video-bg">
+        <video autoplay loop muted playsinline>
+            <source src="7049943-hd_1920_1080_30fps.mp4" type="video/mp4">
+            <!-- Fallback image if video doesn't load -->
+            <img src="assets/images/hero-fallback.jpg" alt="Office Background">
+        </video>
+    </div>
+
+
+
+
+
+
+        
         <div class="hero-content">
            <h1 class="typewriter">
   <span class="typewriter-line">Strategic Staffing Solutions</span>
