--- a/index.html
+++ b/index.html
@@ -206,18 +206,13 @@
         /* Hero Section */
      /* Hero Section - Video Background Version */
 .hero {
-    position: relative;
+   position: relative;
     height: 100vh;
     min-height: 600px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     overflow: hidden;
-    padding: 120px 20px;
-    /* Remove the gradient background */
 }
-
-.hero-video-bg {
+/* Video Background (pure decoration) */
+.video-bg {
     position: absolute;
     top: 0;
     left: 0;
@@ -226,31 +221,53 @@
     z-index: 0;
 }
 
-.hero-video-bg video {
+.video-bg video {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
 
+
 .video-overlay {
-    position: absolute;
+   
+     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 51, 160, 0.6); /* Blue tint overlay */
+    background: rgba(0, 51, 160, 0.5); /* Blue tint overlay */
     z-index: 1;
+}
+        .hero-container {
+    position: relative;
+    height: 100%;
+    z-index: 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .hero-content {
-    position: relative;
-    z-index: 2;
-    max-width: 800px;
-    margin: 0 auto;
+max-width: 800px;
+    padding: 0 20px;
     text-align: center;
     color: white;
 }
 
+
+
+/* Enhance text visibility */
+.hero h1 {
+    text-shadow: 1px 1px 4px rgba(0,0,0,0.4);
+}
+
+.hero p {
+    text-shadow: 1px 1px 3px rgba(0,0,0,0.3);
+    margin: 0 auto 30px;
+    max-width: 600px;
+}
+
+        
 /* Keep all your existing hero content styles */
         }
 
@@ -974,7 +991,9 @@
             <img src="assets/images/hero-fallback.jpg" alt="Office Background">
         </video>
     </div>
-
+   <div class="video-overlay"></div>
+    </div>
+        <div class="hero-container">
 
 
 
