--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
         .btn {
             display: inline-block;
             padding: 12px 30px;
-            background: var(--primary-blue);
+            background: red;
             color: var(--white);
             border: none;
-            border-radius: 4px;
+            border-radius: 20px;
             cursor: pointer;
             font-size: 16px;
             font-weight: 600;
@@ -108,20 +108,25 @@
         }
 
         .btn:hover {
-            background: var(--primary-red);
+            background: blue;
             transform: translateY(-3px);
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+            color:white;
         }
 
         .btn-outline {
-            background: transparent;
+            background: blue;
+            color:white;
+            border-radius:20px;
             border: 2px solid var(--primary-blue);
             color: var(--primary-blue);
         }
 
         .btn-outline:hover {
-            background: var(--primary-blue);
+            background: red;
             color: var(--white);
+            color:white;
+            
         }
 
         /* Header Styles */
