--- a/index.html
+++ b/index.html
@@ -1028,7 +1028,7 @@ max-width: 800px;
             <p>Dara Employment Agency connects top talent with leading companies through temporary staffing, direct hire, and comprehensive employer of record services.</p>
             <div class="hero-btns">
                 <a href="#application" class="btn">Apply for Jobs</a>
-                <a href="#contact" class="btn btn-outline">Contact Our Team</a>
+                <a href="#contact" class="btn btn-outline">Contact Us</a>
             </div>
         </div>
     </section>
@@ -1314,7 +1314,7 @@ max-width: 800px;
     <section class="section contact" id="contact">
         <div class="container">
             <div class="section-title">
-                <h2>Contact Our Team</h2>
+                <h2>Contact Us</h2>
                 <p>We're here to answer your questions</p>
             </div>
 
